--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/background"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".MainActivity">
@@ -30,11 +30,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/button_primary"
         android:fontFamily="@font/poppins_medium"
         android:paddingHorizontal="35dp"
         android:paddingVertical="10dp"
-        android:textColor="@color/white"
+        android:textColor="@color/button_text"
         android:text="@string/find_beer"
         android:textSize="20sp" />
 
@@ -44,7 +44,7 @@
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:layout_margin="8dp"
-        android:textColor="@color/black"
+        android:textColor="@color/text"
         android:fontFamily="@font/poppins_medium"
         android:text="@string/brands"
         android:textSize="16sp" />
