--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -27,7 +27,7 @@
         android:fontFamily="@font/train_one_regular"
         android:text="@string/beer"
         android:textSize="50sp"
-        android:textColor="@color/black"
+        android:textColor="@color/text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
@@ -40,7 +40,7 @@
         android:letterSpacing="0.4"
         android:text="@string/adviser"
         android:textSize="20sp"
-        android:textColor="@color/black"
+        android:textColor="@color/text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewBeer" />
