fix(theme): ensure consistent dark background color
- Updated background_image.xml to use #FF0C0C0C

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="button_text">#FF000000</color>
     <color name="button_primary">#FFFFFFFF</color>
-    <color name="background">#0C0C0C</color>
+    <color name="background">#FF0C0C0C</color>
     <color name="text">#FFFFFFFF</color>
 </resources>
